fixed problem with duplicate entries in most frequently used nodes